--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     </style>
 </head>
 <body>  
+    <p>Test</p>
     <div class="container">
         <div id="text_container">
             <div class="name"><h1>Quentin Vancompernolle</h1></div>
